--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-intl": "^7.1.6",
     "react-router-dom": "^6.30.0"
   },
   "devDependencies": {
